# owl

./: .gitignore  README.md  common.py  document.py  enum_utils.py  pyproject.toml  test_document.py  test_text_splitter.py  text_splitter.py  url.py
data/: sample.csv  sample.json  sample.jsonl  sample.txt
examples/: list_mcp_tools.py  mcp_integration.py  ollama_agent_conversation.py  research_assistant.py  server_config.json
owl/: agent.py  common.py  document.py  jsonrpc.py  mcp.py  mcp_manager.py  parameter_inference.py  prompt.py  text_splitter.py  tool.py  transports.py  url.py
prompts/: prompts.toml
tests/: test_agent.py  test_document.py  test_text_splitter.py
