[project]
name = "owl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "pydantic>=2.11.7",
    "httpx>=0.25.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "mcp>=1.11.0",
    "nbformat>=5.10.4",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
    "tiktoken>=0.9.0",
]

[tool.setuptools.packages.find]
include = ["owl*"]
exclude = ["data*", "tests*"]
